# vision-analytics-pipeline

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: main.py
app/: demo_gen.py  streamlit_app.py
core/: anonymizer.py  detector.py  pipeline.py  tracker.py  zone_analyzer.py
export/: onnx_export.py
schemas/: events.py
tests/: test_pipeline.py  test_tracker.py  test_zone_analyzer.py
