[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vision-analytics-pipeline"
version = "1.0.0"
description = "Real-time multi-object tracking and zone analytics. Privacy-first."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["computer-vision", "object-tracking", "SORT", "zone-analytics", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N999"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "api", "schemas"]
omit = ["tests/*", "export/*", "scripts/*"]
